--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Your Steam API key can be obtained here: https://steamcommunity.com/dev/apikey
 # The domain on the page linked above doesn't have to match
 # This is used to fetch your dayz server information
-STEAM_API_KEY=
+STEAM_API_KEY=F0AE721A263943BA0A9F2A7E8814C417
 
 # CFTools Developer Application - Used for the leaderboard
 # Values can be grabbed from https://developer.cftools.cloud/applications
